# proksi

./: .gitignore  .goreleaser.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build-cross-release.sh  build.go  clippy.toml  config.cue  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md  questions-others.md
.github/workflows/: dependabot_auto_merge.yml  discord.yml  release.yml  test.yml
assets/: localhost.key  middleware-test.wasm
benches/: dashmap_arc.rs
crates/plugin_request_id/: Cargo.toml
crates/plugin_request_id/src/: lib.rs
crates/plugins_api/: Cargo.toml
crates/plugins_api/src/: lib.rs
crates/plugins_api/wit/: plugin.wit
crates/proksi/: Cargo.toml
crates/proksi/src/: main.rs
crates/proksi/src/cache/disk/: handlers.rs  mod.rs
crates/proksi/src/config/: hcl.rs  migration.rs  mod.rs  proxy.rs  validate.rs
crates/proksi/src/plugins/: mod.rs
crates/proksi/src/plugins/jwt/: mod.rs
crates/proksi/src/proxy_server/: cert_store.rs  http_proxy.rs  https_proxy.rs  middleware.rs  mod.rs
crates/proksi/src/proxy_service/: acme.rs  builder.rs  mod.rs  ssl.rs
crates/proksi/src/server/: manager.rs  mod.rs
crates/proksi/src/services/: mod.rs
crates/proksi/src/services/config/: mod.rs
crates/proksi/src/services/discovery/: mod.rs
crates/proksi/src/services/docker/: mod.rs
crates/proksi/src/services/health_check/: mod.rs
crates/proksi/src/services/letsencrypt/: http01.rs  mod.rs  storage.rs
crates/proksi/src/services/logger/: mod.rs  rotation.rs
crates/proksi/src/stores/: adapter.rs  certificates.rs  challenges.rs  global.rs  memory_store.rs  mod.rs  redis_store.rs  routes.rs  store_trait.rs
crates/proksi/src/wasm/: js_plugin.rs
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  cache.md  index.html  logging.md
docs/configuration/: auto-reload.md  daemon.md  logging.md  redis.md  yaml.md
docs/contributing/: repository.md
docs/general/: motivations.md  performance.md  specifications.md
docs/plugins/: basic-auth.md  oauth2.md  request-id.md
docs/routing/: headers.md  upstreams.md
docs/use-cases/: docker-swarm.md
examples/: config.example.toml  config.example.yaml  example.hcl  example.yaml  multi-proxy-configs.md  proksi.toml  proksi.yaml
examples/configs/: cloudflare-containers.yaml  legacy-ssl-disabled.yaml  microservices-gateway.yaml  mixed-environment.hcl
fixtures/: localhost.crt
gitbook/: README.md  SUMMARY.md
gitbook/configuration/: auto-reload.md  auto_reload.md  environment-variables.md  hcl.md  redis.md  toml.md  yaml.md
gitbook/configuration/hcl/: README.md  functions.md
gitbook/contributing/: repository.md
gitbook/general/: features.md  motivations.md  performance.md
gitbook/installation/: docker.md  single-binary.md
gitbook/plugins/: basic-auth.md  oauth2.md  request-id.md
gitbook/use-cases/: cache.md
plugin_request_id/src/: lib.rs
plugins_api/: Cargo.toml
plugins_api/src/: lib.rs
proksi/: Cargo.toml
proksi/src/: main.rs
proksi/src/cache/disk/: meta.rs  storage.rs
proksi/src/plugins/oauth2/: github.rs  mod.rs  workos.rs
proksi/src/proxy_server/: http_proxy.rs  mod.rs
proksi/src/services/: mod.rs
proksi/src/services/config/: mod.rs
proksi/src/stores/: cache.rs
proksi/src/wasm/: js_plugin.rs  mod.rs
proxy_server/src/plugins/oauth2/: shared.rs
proxy_server/src/services/docker/: mod.rs
proxy_server/src/services/health_check/: mod.rs
proxy_server/src/stores/: challenges.rs
proxy_server/src/wasm/: js_plugin.rs
specs/: README.md
src/: main.rs
src/cache/: file_storage.rs  mod.rs
src/cache/disk/: handlers.rs  meta.rs  storage.rs
src/config/: hcl.rs  mod.rs  validate.rs
src/docker/: client.rs
src/plugins/: README.md  mod.rs
src/plugins/basic_auth/: mod.rs
src/plugins/jwt/: mod.rs
src/plugins/oauth2/: github.rs  mod.rs  provider.rs  secure_cookie.rs  shared.rs  workos.rs
src/plugins/request_id/: mod.rs
src/proxy_server/: cert_store.rs  http_proxy.rs  https_proxy.rs  middleware.rs  mod.rs
src/services/: http_letsencrypt.rs  mod.rs
src/services/config/: mod.rs
src/services/discovery/: mod.rs
src/services/docker/: client.rs  mod.rs
src/services/health_check/: mod.rs
src/services/letsencrypt/: http01.rs  mod.rs  store.rs
src/services/logger/: mod.rs  rotation.rs
src/stores/: cache.rs  certificates.rs  challenges.rs  mod.rs  routes.rs
src/tools/: mod.rs
src/wasm/: js_plugin.rs
