[workspace]
members = ["plugin_request_id", "plugins_api", "proksi"]
resolver = "2"

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
strip = true       # Automatically strip symbols from the binary.
lto = true         # Enable link-time optimization.
debug = false
codegen-units = 1
incremental = true
panic = "abort"    # Abort on panic.
