[workspace]
package = { rust-version = "1.85.0" }
members = ["crates/plugin_request_id", "crates/plugins_api", "crates/proksi"]
resolver = "2"

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
strip = true       # Automatically strip symbols from the binary.
lto = true         # Enable link-time optimization.
debug = false
codegen-units = 1
incremental = true
panic = "abort"    # Abort on panic.
