[package]
name = "proksi"
description = "A batteries-included reverse proxy with automatic HTTPS using Cloudflare Pingora and Let's Encrypt."
version = "0.4.8"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["proxy", "https", "reverse-proxy", "load-balancer", "pingora"]
categories = ["web-programming::http-server", "network-programming"]
exclude = [
  "*.yaml",
  "*.yml",
  "*.toml",
  "src/*.md",
  "examples/",
  "dist/",
  "docs/",
  "target/",
  "tests/",
  "assets/",
  "tmp/",
  "Makefile",
  "Dockerfile",
  "gitbook/",
  ".github/",
]
authors = ["The Proksi Contributors <toaster.chicory-0b@icloud.com>"]
rust-version = "1.82.0"
readme = "../../README.md"
homepage = "https://github.com/luizfonseca/proksi"
repository = "https://github.com/luizfonseca/proksi"

[dependencies]
TinyUFO = "0.3.0"
acme-v2 = "0.9.3"
anyhow = "1.0.90"
arc-swap = "1.7.1"
async-trait = "0.1.83"
bollard = "0.16.1"
bollard-stubs = "=1.44.0-rc.2"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
cookie = { version = "0.18.1", features = ["private"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
hcl-rs = "0.18.2"
http = "1.1.0"
itertools = "0.13.0"
jsonwebtoken = { version = "9.3.0", default-features = false }
nix = { version = "0.29.0", features = ["signal"] }
notify = { version = "6.1.1", default-features = false, features = [
  "fsevent-sys",
] }
num_cpus = "1.16.0"
once_cell = "1.20.2"
openssl = { version = "0.10", features = ["vendored"] }
papaya = "0.1.4"
path-tree = "0.8.1"
pingora = { version = "0.3.0", features = ["lb", "openssl", "proxy", "cache"] }
pingora-cache = "0.3.0"
prometheus = "0.13.4"
reqwest = { version = "0.12.8", features = ["json"] }
seize = "0.4.5"
serde = "1.0.210"
serde_json = "1.0.132"
short-crypt = "1.0.28"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
wasmtime = "26.0.0"
wasmtime-wasi = "26.0.0"

[[bench]]
name = "dashmap_arc"
harness = false
path = "../benches"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
figment = { version = "0.10.19", features = ["toml", "yaml", "env", "test"] }
